--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@animoca/ethereum-contracts-assets",
-  "version": "3.0.0-pre.0",
+  "version": "3.0.0",
   "description": "Base assets contracts",
   "author": "Animoca Brands",
   "license": "MIT",
